--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,21 @@ html {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+h3 {
+  font-size: 1.45em;
+}
+
 body {
   height: 100vh;
   color: #495057;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgb(227, 247, 215);
+}
+
+p {
+  font-size: 1.2em;
 }
 
 .app {
@@ -31,6 +40,7 @@ body {
   grid-template-columns: 34rem 44rem;
   column-gap: 4rem;
   align-items: start;
+  background-color: rgb(217, 255, 195);
 }
 
 .button {
@@ -94,7 +104,7 @@ body {
   grid-column: 3;
 }
 
-.sidebar>.button {
+.sidebar > .button {
   float: right;
   margin-right: 1.2rem;
 }
